--- a/project-a/package.json
+++ b/project-a/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mobx": "^6.3.13",
+    "mobx-react-lite": "^3.2.3",
+    "mobx-state-tree": "^5.1.3",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
