--- a/project-a/package.json
+++ b/project-a/package.json
@@ -13,7 +13,8 @@
     "mobx-state-tree": "^5.1.3",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "common": "file:../common/"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
