--- a/project-a/package.json
+++ b/project-a/package.json
@@ -14,7 +14,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "common": "file:../common/"
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
