--- a/project-a/package.json
+++ b/project-a/package.json
@@ -13,8 +13,7 @@
     "mobx-state-tree": "^5.1.3",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "moment": "^2.29.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
